[project]
name = "comfyui_anima_artist_cross_attn_mix"
version = "1.0.0"
description = "Mix multiple Anima artist tags so their styles blend evenly, with built-in NegPiP (negative-weight) support - no extra nodes required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/Localsmile/comfyui_anima_artist_cross_attn_mix"

[tool.comfy]
DisplayName = "Anima Artist Cross-Attn Mix"
PublisherId = "Localsmile"
